--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,3 @@
 <h1>InvOrganizer Page</h1>
 
-<h5>Name: </h5>
-<p>{{name}}</p>
-<h5>Class: </h5>
-<p>{{class}}</p>
+<h4>Name: {{name}} Class: {{class}}</h4>
