--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'styles.css' %}" type="text/css">
+<link rel="stylesheet" href="{% static 'styles.css' %}">
 <h1>InvOrganizer Page</h1>
 
 <h4>Name: {{name}} Class: {{class}}</h4>
