--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -34,7 +34,8 @@
 
 
 
-<h6>css file-nya gk muncul :,(</h6> 
+<h6>css file-nya gk muncul :,(</h6>
+<h6>kalau mau lihat hasil yang ada tabel dan ada warnanya bisa clone github ini ==> https://github.com/iqzaardiansyah/invorganizer</h6>
 </pre>
 
 
