--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,18 @@
-{% load static %}
-<link rel="stylesheet" href="{% static 'styles.css' %}">
 <h1>InvOrganizer Page</h1>
 
 <h4>Name: {{name}} Class: {{class}}</h4>
+
+<style>
+    table, th, td {
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px solid black;
+    border-collapse: collapse;
+    }
+    th, td {
+        background-color: #96D4D4;
+    }
+</style>
 
 <table>
     <tr>
