--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 <html style="color: white;">
     <h1>InvOrganizer Page</h1>
     <h4>Name: {{name}} Class: {{class}}</h4>
@@ -33,5 +35,11 @@
             </tr>
             {% endfor %}
         </table>
+        <a href="{% url 'main:create_product' %}">
+            <button>
+                Add New Product
+            </button>
+        </a>
     </body>
 </html>
+{% endblock content %}
