--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -18,7 +18,7 @@
                 background-color: grey;
             }
         </style>
-    
+        <p>Item Count : {{count}}</p>
         <table>
             <tr>
                 <th><h4>Nama Produk</h4></th>
