--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %} 
 
 {% block content %}
-<html style="color: white;">
-    <body style="background-color: grey;">
+<html>
+    <body>
         <h1>Add New Item</h1>
 
         <form method="POST">
