--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
         th, td {
             background-color: grey;
         }
+        table {
+            text-align: center;
+        }
     </style>
 
     <head>
