--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,50 +1,229 @@
 {% extends 'base.html' %}
+
+<nav>
+    {% block logout %}
+    <a class="navbar-brand" href="{% url 'main:logout' %}">
+        <button class="red">
+            Logout
+        </button>
+    </a>
+    {% endblock logout %}
+</nav>
+
 {% block content %}
 <html>
-    <h1>InvOrganizer Page</h1>
-    <h4>Name: {{name}} Class: {{class}}</h4>
+    <style>
+        .myCard {
+            background-color: transparent;
+            height: 200px;
+            perspective: 1000px;
+        }
+
+        .title {
+            font-size: 1.5em;
+            font-weight: 900;
+            text-align: center;
+            margin: 0;
+        }
+
+        .innerCard {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            transition: transform 0.8s;
+            transform-style: preserve-3d;
+            cursor: pointer;
+        }
+
+        .myCard:hover .innerCard {
+            transform: rotateX(180deg);
+        }
+
+        .frontSide,
+        .backSide {
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-evenly;
+            width: 100%;
+            height: 100%;
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+            border: 1px solid rgba(255, 255, 255, 0.8);
+            border-radius: 1rem;
+            color: wheat;
+            box-shadow: 0 0 0.3em rgba(255, 255, 255, 0.5);
+            font-weight: 700;
+        }
+
+        .frontSide,
+        .frontSide::before {
+            background: linear-gradient(43deg, rgb(65, 88, 208) 0%, rgb(200, 80, 192) 46%, rgb(255, 204, 112) 100%);
+        }
+
+        .backSide,
+        .backSide::before {
+            background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+        }
+
+        .backSide {
+            transform: rotateX(180deg);
+        }
+
+        .frontSide::before,
+        .backSide::before {
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            content: '';
+            width: 110%;
+            height: 110%;
+            position: absolute;
+            z-index: -1;
+            border-radius: 1em;
+            filter: blur(20px);
+            animation: animate 5s linear infinite;
+        }
+
+        @keyframes animate {
+            0% {
+                opacity: 0.3;
+            }
+
+            80% {
+                opacity: 1;
+            }
+
+            100% {
+                opacity: 0.3;
+            }
+        }
+
+        button {
+            --color: #0077ff;
+            display: inline-block;
+            width: 100px;
+            height: 25px;
+            line-height: 2.5em;
+            overflow: hidden;
+            font-size: 10px;
+            z-index: 1;
+            color: var(--color);
+            border: 2px solid var(--color);
+            border-radius: 4px;
+            position: relative;
+        }
+
+        .red {
+            --color: #ff0000;
+            display: inline-block;
+            width: 100px;
+            height: 25px;
+            line-height: 2.5em;
+            overflow: hidden;
+            font-size: 10px;
+            z-index: 1;
+            color: var(--color);
+            border: 2px solid var(--color);
+            border-radius: 4px;
+            position: relative;
+        }
+
+        .tambahkurang {
+            --color: #0077ff;
+            display: inline-block;
+            width: 25px;
+            height: 25px;
+            line-height: 2.5em;
+            overflow: hidden;
+            font-size: 10px;
+            z-index: 1;
+            color: var(--color);
+            border: 2px solid var(--color);
+            border-radius: 4px;
+            position: relative;
+        }
+
+        button::before {
+            position: absolute;
+            content: "";
+            background: var(--color);
+            width: 150px;
+            height: 200px;
+            z-index: -1;
+            border-radius: 50%;
+        }
+
+        button:hover {
+            color: white;
+        }
+
+        button:before {
+            top: 100%;
+            left: 100%;
+            transition: .3s all;
+        }
+
+        button:hover::before {
+            top: -30px;
+            left: -30px;
+        }
+    </style>
+    <h4>Name: {{name}}</h4>
+    <h4>Class: {{class}}</h4>
+    <h4>Log-in User: {{user}}</h4>
 
     <hr>
 
     <body>
         <p>Item Count : {{count}}</p>
-        <table>
-            <tr>
-                <th><h4>Nama Produk</h4></th>
-                <th><h4>Jumlah Produk</h4></th>
-                <th><h4>Harga Produk</h4></th>
-                <th><h4>Deskripsi Produk</h4></th>
-            </tr>
-            {% for produk in list %}
-            <tr>
-                <td><h4>{{produk.name}}</h4></td>
-                <td><h4><form action="{% url 'main:indecrement' id=produk.id %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit" name="increment"><i class="fa fa-trash">+</i></button>
-                 </form>{{produk.amount}}<form action="{% url 'main:indecrement' id=produk.id %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit" name="decrement"><i class="fa fa-trash">-</i></button>
-                 </form></h4></td>
-                <td><h4>{{produk.price}}</h4></td>
-                <td><h4>{{produk.description}}</h4></td>
-                <td><h4><form action="{% url 'main:remove' id=produk.id %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit" ><i class="fa fa-trash">Remove</i></button>
-                 </form></h4></td>
-            </tr>
-            {% endfor %}
-        </table>
+        {% for produk in list %}
+        <div class="myCard">
+            <div class="innerCard">
+                <div class="frontSide">
+                    <p class="title">{{produk.name}}</p>
+                </div>
+                <div class="backSide">
+                    <p>Jumlah Produk: 
+                        <a href="{% url 'main:decrement' produk.id %}">
+                            <button class="tambahkurang">
+                                -
+                            </button>
+                        </a> 
+                        {{produk.amount}}
+                        <a href="{% url 'main:increment' produk.id %}">
+                            <button class="tambahkurang">
+                                +
+                            </button>
+                        </a> 
+                    </p>
+                    <p>Harga Produk: {{produk.price}}</p>
+                    <p>Deskripsi Produk: {{produk.description}}</p>
+                    <a href="{% url 'main:remove' produk.id %}">
+                        <button class="red">
+                            Remove
+                        </button>
+                    </a>
+                    <a href="{% url 'main:edit_product' produk.id %}">
+                        <button>
+                            Edit
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
         <a href="{% url 'main:create_product' %}">
             <button>
                 Add New Product
             </button>
         </a>
-        <a href="{% url 'main:logout' %}">
-            <button>
-                Logout
-            </button>
-        </a>
-        <h5>Sesi terakhir login: {{ last_login }}</h5>
+        <h6>Sesi terakhir login: {{ last_login }}</h6>
     </body>
 </html>
 {% endblock content %}
+
+
+
