--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,17 @@
 {% load static %}
+
+<nav class="navbar bg-body-tertiary" style="background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%)">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{% url 'main:backtomain' %}">
+        InvOrganizer
+      </a>
+      {% block logout %}
+      {% endblock logout %}
+    </div>
+</nav>
+
 <!DOCTYPE html>
 <html lang="en" style="color: white;">
-
-    <style>
-        table, th, td {
-        padding-left: 10px;
-        padding-right: 10px;
-        border: 1px solid white;
-        border-collapse: collapse;
-        }
-        th, td {
-            background-color: grey;
-        }
-        table {
-            text-align: center;
-        }
-    </style>
 
     <head>
         <meta charset="UTF-8" />
@@ -25,11 +21,20 @@
         />
         {% block meta %}
         {% endblock meta %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+J4jsl5c9zdLKaUk5Ae5f5b1bw6AUn5f5v8FZJoMxm6f5cH1" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+
     </head>
 
     <body>
         <style>
-            body {background-image: linear-gradient(to right, black, grey, white); font-family: 'Courier New', Courier, monospace;}
+            body {
+                background-image: linear-gradient(43deg, rgb(65, 88, 208) 0%, rgb(200, 80, 192) 46%, rgb(255, 204, 112) 100%); 
+                font-family: 'Fira Mono', monospace;
+                color: wheat;
+            }
         </style>
         {% block content %}
         {% endblock content %}
